[package]
name = "egui_dock"
description = "Docking support for `egui` - an immediate-mode GUI library for Rust"
authors = ["Iain-dono", "Adam Gąsior (Adanos020)"]
version = "0.2.1"
edition = "2021"
rust-version = "1.62"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Adanos020/egui_dock"
categories = ["gui", "game-development"]
include = ["src/*.rs", "Cargo.toml", "LICENSE"]

[features]
default = []

# Enable serialization of `Tree`.
serde = ["dep:serde", "egui/serde"]


[dependencies]
# egui = "*"

# eframe = { path = "../egui/crates/eframe", features=[]}
egui_extras = { path = "../egui/crates/egui_extras"}
egui = { path = "../egui/crates/egui", features=["color-hex"]}
epaint = { path = "../egui/crates/epaint", features=["color-hex"] }


serde = { version = "*", optional = true, features = ["derive"] }

[dev-dependencies]
eframe = "*"
